--- a/output/basic_financial_transactions/howto.html
+++ b/output/basic_financial_transactions/howto.html
@@ -70,7 +70,7 @@
 <li>StudentContactPersonal</li>
 </ul></li>
 </ul>
-<p>(Note that some or all of these objects are proposed for SIF 1.4 and are therefore not in the SIF 1.3 schema. Here is <a href="http://kb.nsip.edu.au/download/attachments/13960456/SIF_Message1.4_3.x_current.zip"><strong>a draft XSD schema for SIF 1.4</strong></a>, and here are the <strong><a href="http://kb.nsip.edu.au/download/attachments/13960404/DSWG_V1.4_ChangeProposal_Financial_0.6.pdf">draft specification details</a></strong> for the above objects.)</p>
+<p>(Note that some or all of these objects are proposed for SIF 1.4 and are therefore not in the SIF 1.3 schema. Here is <a href="/docs/common/resources/SIF_Message1.4_3.x_current.zip"><strong>a draft XSD schema for SIF 1.4</strong></a>, and here are the <strong><a href="resources/DSWG_V1.4_ChangeProposal_Financial_0.6.pdf">draft specification details</a></strong> for the above objects.)</p>
 <h4 id="usecase-workflow-summary">Usecase workflow summary:</h4>
 <ol style="list-style-type: decimal">
 <li><p>Join</p></li>
